[gd_scene load_steps=20 format=3 uid="uid://dtgrauftxoh2h"]

[ext_resource type="Texture2D" uid="uid://bwbcb5pyrh2d5" path="res://scenes/game_object/player/player.png" id="1_blnpi"]
[ext_resource type="Script" path="res://scenes/game_object/player/player.gd" id="1_f3kyn"]
[ext_resource type="PackedScene" uid="uid://ckis5xwgtnc0d" path="res://scenes/component/velocity_component.tscn" id="2_0tgvx"]
[ext_resource type="PackedScene" uid="uid://lyaghyibd3bq" path="res://scenes/ability/sword_ability_controller/sword_ability_controller.tscn" id="2_jgaxi"]
[ext_resource type="PackedScene" uid="uid://0q0sbalojj02" path="res://scenes/component/health_component.tscn" id="2_t57ly"]
[ext_resource type="PackedScene" uid="uid://ym7j3mqf0jh7" path="res://scenes/component/random_stream_player_2d_component.tscn" id="4_0fbcb"]
[ext_resource type="AudioStream" uid="uid://bb8kgunhpx7x4" path="res://assets/audio/impactMining_000.ogg" id="5_bsav5"]
[ext_resource type="AudioStream" uid="uid://ceuwvxdj0apjd" path="res://assets/audio/impactMining_001.ogg" id="6_r4n3j"]
[ext_resource type="AudioStream" uid="uid://ua40qpcnyfx" path="res://assets/audio/impactMining_002.ogg" id="7_8idvh"]
[ext_resource type="AudioStream" uid="uid://3a6h10bbgkmm" path="res://assets/audio/impactMining_003.ogg" id="8_qeaox"]
[ext_resource type="AudioStream" uid="uid://bsq70b4urrus1" path="res://assets/audio/impactMining_004.ogg" id="9_tbgak"]

[sub_resource type="Animation" id="Animation_vymmq"]
length = 0.8
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Visuals/Sprite2D:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Visuals/Sprite2D:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Visuals/Sprite2D:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}

[sub_resource type="Animation" id="Animation_507iy"]
resource_name = "walk"
length = 0.7
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Visuals/Sprite2D:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.3, 0.5, 0.7),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(0, -5), Vector2(0, 0), Vector2(0, -5), Vector2(0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Visuals/Sprite2D:rotation")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.4, 0.5, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 0,
"values": [0.0, -0.261799, 0.261799, 0.0, 0.261799, -0.261799]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Visuals/Sprite2D:scale")
tracks/2/interp = 2
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.1, 0.3, 0.4, 0.5, 0.7),
"transitions": PackedFloat32Array(0.732043, 2.43104, 1, 0.63728, 2.43104, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(0.8, 1.1), Vector2(1.5, 0.7), Vector2(1, 1), Vector2(0.8, 1.1), Vector2(1.5, 0.7)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_o2dnl"]
_data = {
"RESET": SubResource("Animation_vymmq"),
"walk": SubResource("Animation_507iy")
}

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_6h08q"]
bg_color = Color(0.247059, 0.14902, 0.192157, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_nka36"]
bg_color = Color(0.262745, 0.882353, 0.701961, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.247059, 0.14902, 0.192157, 1)

[sub_resource type="CircleShape2D" id="CircleShape2D_p1ay2"]
radius = 32.0

[sub_resource type="CircleShape2D" id="CircleShape2D_p4qvv"]
radius = 7.0

[sub_resource type="CircleShape2D" id="CircleShape2D_iny2e"]
radius = 5.0

[node name="Player" type="CharacterBody2D" groups=["player"]]
collision_layer = 0
motion_mode = 1
script = ExtResource("1_f3kyn")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_o2dnl")
}

[node name="VelocityComponent" parent="." instance=ExtResource("2_0tgvx")]
max_speed = 90
acceleration = 25.0

[node name="HealthComponent" parent="." instance=ExtResource("2_t57ly")]

[node name="HitRandomStreamPlayer" parent="." instance=ExtResource("4_0fbcb")]
streams = Array[AudioStream]([ExtResource("5_bsav5"), ExtResource("6_r4n3j"), ExtResource("7_8idvh"), ExtResource("8_qeaox"), ExtResource("9_tbgak")])

[node name="Abilities" type="Node" parent="."]

[node name="SwordAbilityController" parent="Abilities" instance=ExtResource("2_jgaxi")]

[node name="DamageIntervalTimer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="HealthBar" type="ProgressBar" parent="."]
custom_minimum_size = Vector2(28, 6)
offset_left = -14.0
offset_top = -23.0
offset_right = 14.0
offset_bottom = -17.0
pivot_offset = Vector2(14, 3)
theme_override_styles/background = SubResource("StyleBoxFlat_6h08q")
theme_override_styles/fill = SubResource("StyleBoxFlat_nka36")
max_value = 1.0
value = 0.5
show_percentage = false

[node name="PickupArea2D" type="Area2D" parent="."]
position = Vector2(0, -6)
collision_layer = 16
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="PickupArea2D"]
shape = SubResource("CircleShape2D_p1ay2")

[node name="Visuals" type="Node2D" parent="."]

[node name="Sprite2D" type="Sprite2D" parent="Visuals"]
texture = ExtResource("1_blnpi")
offset = Vector2(0, -8)

[node name="CollisionArea2D" type="Area2D" parent="."]
visible = false
position = Vector2(0, -7)
collision_layer = 0
collision_mask = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="CollisionArea2D"]
shape = SubResource("CircleShape2D_p4qvv")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -5)
shape = SubResource("CircleShape2D_iny2e")

[connection signal="health_changed" from="HealthComponent" to="." method="_on_health_component_health_changed"]
[connection signal="timeout" from="DamageIntervalTimer" to="." method="_on_damage_interval_timer_timeout"]
[connection signal="body_entered" from="CollisionArea2D" to="." method="_on_collision_area_2d_body_entered"]
[connection signal="body_exited" from="CollisionArea2D" to="." method="_on_collision_area_2d_body_exited"]
